; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_sdl_serialize_type_ref.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_sdl_serialize_type_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32*, i32*)* @sdl_serialize_type_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdl_serialize_type_ref(i64 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = bitcast i64* %4 to i8*
  %13 = call i32* @zend_hash_str_find(i32* %11, i8* %12, i32 8)
  store i32* %13, i32** %7, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %10
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @Z_LVAL_P(i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @WSDL_CACHE_PUT_INT(i32 %17, i32* %18)
  br label %23

20:                                               ; preds = %10
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @WSDL_CACHE_PUT_INT(i32 0, i32* %21)
  br label %23

23:                                               ; preds = %20, %15
  br label %27

24:                                               ; preds = %3
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @WSDL_CACHE_PUT_INT(i32 0, i32* %25)
  br label %27

27:                                               ; preds = %24, %23
  ret void
}

declare dso_local i32* @zend_hash_str_find(i32*, i8*, i32) #1

declare dso_local i32 @WSDL_CACHE_PUT_INT(i32, i32*) #1

declare dso_local i32 @Z_LVAL_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
